# imu_mocap

./: .clang-format  CMakeLists.txt  README.md  package.xml
config/: imu_mocap_params.yaml
include/imu_mocap/: ahrs_orientation.hpp  json_parser.hpp  mocap_imu_calibration.hpp
launch/: ahrs_orientation.launch.py  imu_mocap.launch.py
msg/: ImuData.msg  ImuDataArray.msg  ImuOrientation.msg  ImuOrientationArray.msg
src/: ahrs_orientation.cpp  ahrs_orientation_node.cpp  json_parser.cpp  mocap_imu_calibration.cpp  mocap_imu_calibration_node.cpp
test/: madgwick_sim_test.cpp
